public/css/trials.css
.row:before, .row:after,
.clearfix:before, .clearfix:after {
    content: " ";
    display: table;
}

.row:after,
.clearfix:after {
    clear: both;
}

.row .col {
    float:left;
    width:100%;
    padding:0 1em;
    -webkit-box-sizing:border-box;
    -moz-box-sizing:border-box;
    box-sizing:border-box;
}

.button {
    text-decoration: none;
    padding:0.5em;
    border:1px solid #40373F;
    border-radius:3px;
    margin-top:5px;
    display:inline-block;
    background:#40373F;
    color:#fff;
}

#trial-complete .button {
    border-color #ccc;
    background:#333;
}

a {
    color:dodgerblue;
    text-decoration: none;
}

header {
    background:#f2f2f2;
    padding:0.75em;
    min-width:1000px;
}

header .company-info {
    float:left;
    width:50%;
}

header h1 {
    margin:0;
}

header .company-info img,
header .company-info .name-and-tagline {
    float:left;
}

header .nav-and-promo {
    float:right;
    width:50%;
    text-align:right;
}

header nav {
    margin-top:1.2em;
}

header nav ul {
    list-style:none;
    margin:0;
    padding:0;
}

header nav ul li {
    display:inline;
    margin-right:1.5em;
}

header nav ul li a {
    text-decoration: none;
    font-weight: bold;
}

header nav ul li:last-child {
    margin-right:0;
}

.promo {
    color:darkgreen;
    font-style:italic;
    font-size:0.9em;
}

#search-and-breadcrumbs {
    width:1000px;
    margin:0 auto;
    padding-top:0.75em;
}

#breadcrumbs {
    list-style:none;
    padding:0;
    min-width:400px;
    float:left;
    margin-bottom:0;
    margin-top:0.5em;
}

#breadcrumbs li {
    display:inline;
    margin-right:0.5em;
}

#breadcrumbs li:after {
    content:"\203A";
    margin-left:0.5em;
}

#breadcrumbs li:last-child:after {
    content:"";
}

.search {
    float:right;
}

.search input {
    font-size:12px;
    padding:5px;
    color:#999;
}

.search .button {
    padding:0.25em 0.5em;
    font-size:0.9em;
    line-height:1;
}

#product-nav {
    border:1px solid #ccc;
    padding:1em;
    width:180px;
    margin-right:1em;
    float:left;
    font-size:0.9em;
}

#product-nav ul {
    list-style:none;
}

#product-nav > ul {
    padding-left:0;
    margin:0;
    line-height:1.4;
}

#product-nav > ul > li {
    margin-bottom:1em;
}

#product-nav ul li.active a {
    color:#40373F;
}

#content {
    width:1000px;
    margin:0 auto;
}

#content section {
    width:100%;
    float:left;
}

footer {
    color:#666;
    padding:1em;
    text-align:center;
    font-size:0.9em;
    line-height: 1.3;
}

footer a {
    text-decoration: none;
    margin-right:0.5em;
    margin-left:0.5em;
}

.row .col {
    width:33.33%;
    padding-left:0;
    margin-bottom:1em;
}

.row .col:nth-child(3n) {
    padding-right:0;
}

.row .col .nav-block {
    border:1px solid #ccc;
    padding-left:1em;
}

.row .col .nav-block .button {
    margin-bottom:1em;
}

#hero {
    border: 1px solid #ccc;
    padding:1em;
}

#hero img {
    margin:0 auto;
    display:block;
}

#hero p {
    float:left;
    line-height:1.4;
    font-size:1.2em;
    margin-left:0.5em;
}

#category #hero img {
    float:left;
}

#category #hero p {
    float:right;
    max-width:300px;
}

#category h3:first-child {
    margin-top:0;
}

#also-viewed .nav-block img,
.categories .nav-block img {
    display:block;
    margin:0.5em auto;
}

#category-col {
    width:760px;
    float:left;
}

#home-nav {
    width:600px;
    float:left;
    list-style:none;
    padding:0;
    margin-top:0.5em;
}

#home-nav li {
    display:inline;
    margin-right:4em;
}

#product-image {
    float:left;
    width:450px;
}

#product-image img {
    margin:1em auto;
    display:block;
}

#colors {
    list-style:none;
    padding:0;
    text-align: center;
}

#colors li {
    display:inline-block;
    border:1px solid #ccc;
    height:20px;
    width:20px;
    text-indent:-9999em;
}

#colors .active {
    border:1px solid #333;
}

#colors .white {
    background:white;
}

#colors .red {
    background:red;
}

#colors .blue {
    background:blue;
}

#colors .green {
    background: green;
}

#colors .black {
    background:black;
}

#product-info {
    float:right;
    width:550px;
    text-align:right;
}

#product-info .promo {
    font-style:normal;
    font-weight:bold;
}

#product-info .price-each {
    font-size:1.2em;
}

#product-info .price,
#product-info .quantity,
#product-info .promo,
#product-info .add-to-cart {
    margin:1em 0;
}

#product-info .quantity input {
    width:50px;
}

#product-info .label,
#product-info label {
    font-size:0.8em;
}

#product-info .info {
    text-align:left;
    border-bottom:1px dotted #ccc;
}

.button.secondary {
    background:#A69586;
    border-color:#A69586;
}

.modal {
  position: relative;
  background: #FFF;
  padding: 20px;
  width: auto;
  max-width: 500px;
  margin: 20px auto;
}

